[gd_scene load_steps=2 format=3 uid="uid://de7ujcgadhfo"]

[ext_resource type="Script" path="res://scenes/start/start.gd" id="1_ue0mh"]

[node name="start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ue0mh")

[node name="menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -50.0
offset_right = 149.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="menu"]
layout_mode = 2
text = "START"

[node name="Reset" type="Button" parent="menu"]
layout_mode = 2
text = "RESET"

[node name="Quit" type="Button" parent="menu"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="menu/Quit" to="." method="_on_quit_pressed"]
